Update Java versions and library versions to Java 21 and Jetty 11